--- a/Calculate_Epsilon.ipynb
+++ b/Calculate_Epsilon.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPoBcwegWg6eacqCgbidb0i",
+      "authorship_tag": "ABX9TyPhj17FY3cqSBaELdDmI2Hg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,19 +321,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d44O5i5HFwjF",
-        "outputId": "bf2cfd8a-8c54-46e0-b6d1-fdfbe5278f18"
+        "outputId": "f9048c13-de60-4cfa-a892-2acc69a43108"
       },
       "source": [
         "# Derive the perturbation magnitude. \n",
         "mean_scores = []\n",
         "\n",
         "for epsilon in epsilon_grid:\n",
-        "    mean_scores.append(perturb_images(scorer, epsilon))\n",
+        "    mean_scores.append(perturb_images(scorer, epsilon).numpy())\n",
         "\n",
         "epsilon_selected = epsilon_grid[np.argmax(mean_scores)]\n",
         "print(f\"Epsilon: {epsilon_selected}\")"
       ],
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
