Added shortlink to the pre-training notebook.

--- a/Calculate_Epsilon.ipynb
+++ b/Calculate_Epsilon.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPhj17FY3cqSBaELdDmI2Hg",
+      "authorship_tag": "ABX9TyNgOJIiYE3qMO3yZ/fkQXZT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,7 @@
       },
       "source": [
         "# Retrieve the pre-trained ResNet20 model.\n",
+        "# Refer to this notebook for details: https://git.io/JOJuL.\n",
         "!gdown --id 1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay -O odin_rn_model.tar.gz\n",
         "!tar xf odin_rn_model.tar.gz"
       ],
