Added a clipping utility

--- a/Calculate_Epsilon.ipynb
+++ b/Calculate_Epsilon.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNgOJIiYE3qMO3yZ/fkQXZT",
+      "authorship_tag": "ABX9TyOH0Dg2ebshcOCcWDsgSqNw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hSP_ddoJ6FSy",
-        "outputId": "0954d1b4-79bd-4b2b-8717-1ec0a0548f60"
+        "outputId": "54329c66-4f84-4c36-d68d-06ac1b93ac66"
       },
       "source": [
         "# Retrieve the pre-trained ResNet20 model.\n",
@@ -54,7 +54,7 @@
         "!gdown --id 1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay -O odin_rn_model.tar.gz\n",
         "!tar xf odin_rn_model.tar.gz"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay\n",
             "To: /content/odin_rn_model.tar.gz\n",
-            "\r0.00B [00:00, ?B/s]\r6.64MB [00:00, 213MB/s]\n"
+            "6.64MB [00:00, 14.3MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -82,7 +82,7 @@
         "tf.random.set_seed(42)\n",
         "np.random.seed(42)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -101,13 +101,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aSfgIZ1y6qQ6",
-        "outputId": "0db34ed7-0240-4440-e32f-7e74351bfac4"
+        "outputId": "3f381d83-7aa2-46a2-9c62-9b2b0531799a"
       },
       "source": [
         "model = tf.keras.models.load_model(\"odin_rn_model\")\n",
         "print(f\"Pre-trained model loaded with {model.count_params()/1e6} M parameters.\")"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,17 +134,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbMcXWvw679h",
-        "outputId": "24eeed51-f29b-4632-d57b-dcd36c14700c"
+        "outputId": "07f23e96-4b09-43fd-9732-fc211485529d"
       },
       "source": [
         "(_, _), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
         "print(f\"Total test examples: {len(x_test)}\")"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+            "170500096/170498071 [==============================] - 11s 0us/step\n",
             "Total test examples: 10000\n"
           ],
           "name": "stdout"
@@ -170,7 +172,7 @@
         "AUTO = tf.data.AUTOTUNE\n",
         "SAMPLES_PERTURB = 1000"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -192,7 +194,7 @@
         "ds = tf.data.Dataset.from_tensor_slices((x_test, y_test))\n",
         "test_ds = ds.skip(SAMPLES_PERTURB).take(len(x_test) - SAMPLES_PERTURB).batch(BATCH_SIZE)"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -232,7 +234,7 @@
         "# Let's define our model to obtain scores.\n",
         "scorer = tf.keras.Model(model.input, model.layers[-2].output)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -242,36 +244,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRpKXpigBCfG",
-        "outputId": "863387b7-76ad-4a88-d648-ba19e8946796"
+        "outputId": "e3451d72-43fb-465f-e001-7f3c3a38c41d"
       },
       "source": [
         "# We can take a batch of data and obtain the OOD scores like so.\n",
         "sample_scores = scorer.predict(test_ds.take(1))\n",
         "sample_scores[:5]"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.4178029 , 0.2997888 , 0.42754278, 0.2922473 , 0.63637024,\n",
-              "        0.33219904, 0.2604284 , 0.44775465, 0.25829434, 0.4107703 ],\n",
-              "       [0.19263816, 0.34350842, 0.3622666 , 0.35726658, 0.4652104 ,\n",
-              "        0.4666784 , 0.29159823, 0.32265878, 0.17091236, 0.30805007],\n",
-              "       [0.371202  , 0.41554976, 0.502523  , 0.4851712 , 0.6317208 ,\n",
-              "        0.42792296, 0.35079482, 0.33695242, 0.22708139, 0.35269815],\n",
-              "       [0.49741137, 0.34551892, 0.5209366 , 0.50705826, 0.3402585 ,\n",
-              "        0.38563576, 0.3555499 , 0.38100013, 0.3735423 , 0.61080885],\n",
-              "       [0.63022316, 0.6320237 , 0.727445  , 0.73132706, 0.902592  ,\n",
-              "        0.80281264, 0.61695886, 0.7478932 , 0.29849046, 0.8099188 ]],\n",
+              "array([[0.41780296, 0.2997888 , 0.4275428 , 0.2922473 , 0.63637024,\n",
+              "        0.33219904, 0.2604284 , 0.4477548 , 0.25829434, 0.4107704 ],\n",
+              "       [0.19263811, 0.3435083 , 0.36226654, 0.3572665 , 0.46521035,\n",
+              "        0.46667832, 0.29159817, 0.32265866, 0.17091233, 0.30804995],\n",
+              "       [0.37120223, 0.41554987, 0.5025233 , 0.4851714 , 0.6317212 ,\n",
+              "        0.42792305, 0.35079503, 0.3369525 , 0.2270815 , 0.35269836],\n",
+              "       [0.4974115 , 0.345519  , 0.52093667, 0.5070584 , 0.34025857,\n",
+              "        0.38563576, 0.35554996, 0.38100013, 0.37354237, 0.61080885],\n",
+              "       [0.6302233 , 0.6320237 , 0.727445  , 0.73132706, 0.902592  ,\n",
+              "        0.80281276, 0.61695886, 0.74789333, 0.2984905 , 0.80991894]],\n",
               "      dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -284,7 +286,7 @@
         "# Grid as defined in Section 3.2.\n",
         "epsilon_grid = [0.0025, 0.005, 0.01, 0.02, 0.04, 0.08]"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -308,11 +310,12 @@
         "    # Perturb the inputs and derive new mean score.\n",
         "    test_ds_var.assign_sub(epsilon * tf.sign(gradients))\n",
         "    static_tensor = tf.convert_to_tensor(test_ds_var)\n",
+        "    static_tensor = tf.clip_by_value(static_tensor, 0., 255.)\n",
         "    new_mean_score = tf.reduce_mean(model.predict(static_tensor))\n",
         "\n",
         "    return new_mean_score"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -322,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d44O5i5HFwjF",
-        "outputId": "f9048c13-de60-4cfa-a892-2acc69a43108"
+        "outputId": "670eefe1-e839-4fd6-d07b-9a46d89f73d4"
       },
       "source": [
         "# Derive the perturbation magnitude. \n",
@@ -334,7 +337,7 @@
         "epsilon_selected = epsilon_grid[np.argmax(mean_scores)]\n",
         "print(f\"Epsilon: {epsilon_selected}\")"
       ],
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
