Updated the results

--- a/Calculate_Epsilon.ipynb
+++ b/Calculate_Epsilon.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hSP_ddoJ6FSy",
-        "outputId": "54329c66-4f84-4c36-d68d-06ac1b93ac66"
+        "outputId": "8d884d56-da03-4645-ddf7-ae452f4bfb0a"
       },
       "source": [
         "# Retrieve the pre-trained ResNet20 model.\n",
@@ -62,7 +62,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay\n",
             "To: /content/odin_rn_model.tar.gz\n",
-            "6.64MB [00:00, 14.3MB/s]\n"
+            "6.62MB [00:00, 11.7MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -101,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aSfgIZ1y6qQ6",
-        "outputId": "3f381d83-7aa2-46a2-9c62-9b2b0531799a"
+        "outputId": "f0eeb92e-b2d9-4a89-93a1-2ea96cd0566d"
       },
       "source": [
         "model = tf.keras.models.load_model(\"odin_rn_model\")\n",
@@ -112,7 +112,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Pre-trained model loaded with 0.574572 M parameters.\n"
+            "Pre-trained model loaded with 0.572223 M parameters.\n"
           ],
           "name": "stdout"
         }
@@ -134,7 +134,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbMcXWvw679h",
-        "outputId": "07f23e96-4b09-43fd-9732-fc211485529d"
+        "outputId": "e5018457-6651-425b-fd60-8abe4ddd1d74"
       },
       "source": [
         "(_, _), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
@@ -146,7 +146,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170500096/170498071 [==============================] - 11s 0us/step\n",
+            "170500096/170498071 [==============================] - 6s 0us/step\n",
             "Total test examples: 10000\n"
           ],
           "name": "stdout"
@@ -244,7 +244,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRpKXpigBCfG",
-        "outputId": "e3451d72-43fb-465f-e001-7f3c3a38c41d"
+        "outputId": "9518763d-62fc-498b-9609-43c38310fb0f"
       },
       "source": [
         "# We can take a batch of data and obtain the OOD scores like so.\n",
@@ -257,17 +257,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.41780296, 0.2997888 , 0.4275428 , 0.2922473 , 0.63637024,\n",
-              "        0.33219904, 0.2604284 , 0.4477548 , 0.25829434, 0.4107704 ],\n",
-              "       [0.19263811, 0.3435083 , 0.36226654, 0.3572665 , 0.46521035,\n",
-              "        0.46667832, 0.29159817, 0.32265866, 0.17091233, 0.30804995],\n",
-              "       [0.37120223, 0.41554987, 0.5025233 , 0.4851714 , 0.6317212 ,\n",
-              "        0.42792305, 0.35079503, 0.3369525 , 0.2270815 , 0.35269836],\n",
-              "       [0.4974115 , 0.345519  , 0.52093667, 0.5070584 , 0.34025857,\n",
-              "        0.38563576, 0.35554996, 0.38100013, 0.37354237, 0.61080885],\n",
-              "       [0.6302233 , 0.6320237 , 0.727445  , 0.73132706, 0.902592  ,\n",
-              "        0.80281276, 0.61695886, 0.74789333, 0.2984905 , 0.80991894]],\n",
-              "      dtype=float32)"
+              "array([[1.],\n",
+              "       [1.],\n",
+              "       [1.],\n",
+              "       [1.],\n",
+              "       [1.]], dtype=float32)"
             ]
           },
           "metadata": {
@@ -315,7 +309,7 @@
         "\n",
         "    return new_mean_score"
       ],
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -325,7 +319,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d44O5i5HFwjF",
-        "outputId": "670eefe1-e839-4fd6-d07b-9a46d89f73d4"
+        "outputId": "6384ff9e-1d24-4e0d-d64c-2bd7f0503432"
       },
       "source": [
         "# Derive the perturbation magnitude. \n",
@@ -337,12 +331,12 @@
         "epsilon_selected = epsilon_grid[np.argmax(mean_scores)]\n",
         "print(f\"Epsilon: {epsilon_selected}\")"
       ],
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epsilon: 0.08\n"
+            "Epsilon: 0.0025\n"
           ],
           "name": "stdout"
         }
