--- a/Calculate_Epsilon.ipynb
+++ b/Calculate_Epsilon.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOH0Dg2ebshcOCcWDsgSqNw",
+      "authorship_tag": "ABX9TyMK9vZ5HtuVjNPJRsRBumCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hSP_ddoJ6FSy",
-        "outputId": "8d884d56-da03-4645-ddf7-ae452f4bfb0a"
+        "outputId": "7f82ae41-bd93-4871-c944-b30cff32327e"
       },
       "source": [
         "# Retrieve the pre-trained ResNet20 model.\n",
@@ -62,7 +62,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay\n",
             "To: /content/odin_rn_model.tar.gz\n",
-            "6.62MB [00:00, 11.7MB/s]\n"
+            "6.62MB [00:00, 40.2MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -82,7 +82,7 @@
         "tf.random.set_seed(42)\n",
         "np.random.seed(42)"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -101,13 +101,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aSfgIZ1y6qQ6",
-        "outputId": "f0eeb92e-b2d9-4a89-93a1-2ea96cd0566d"
+        "outputId": "98b40271-c689-4161-9a50-86ab2d2f80ab"
       },
       "source": [
         "model = tf.keras.models.load_model(\"odin_rn_model\")\n",
         "print(f\"Pre-trained model loaded with {model.count_params()/1e6} M parameters.\")"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,19 +134,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbMcXWvw679h",
-        "outputId": "e5018457-6651-425b-fd60-8abe4ddd1d74"
+        "outputId": "74ebbf93-b040-4afb-896a-24d7243fcdf8"
       },
       "source": [
         "(_, _), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
         "print(f\"Total test examples: {len(x_test)}\")"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170500096/170498071 [==============================] - 6s 0us/step\n",
             "Total test examples: 10000\n"
           ],
           "name": "stdout"
@@ -172,7 +170,7 @@
         "AUTO = tf.data.AUTOTUNE\n",
         "SAMPLES_PERTURB = 1000"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -194,7 +192,7 @@
         "ds = tf.data.Dataset.from_tensor_slices((x_test, y_test))\n",
         "test_ds = ds.skip(SAMPLES_PERTURB).take(len(x_test) - SAMPLES_PERTURB).batch(BATCH_SIZE)"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -232,9 +230,9 @@
       },
       "source": [
         "# Let's define our model to obtain scores.\n",
-        "scorer = tf.keras.Model(model.input, model.layers[-2].output)"
+        "scorer = tf.keras.Model(model.input, model.layers[-3].output)"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -244,12 +242,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRpKXpigBCfG",
-        "outputId": "9518763d-62fc-498b-9609-43c38310fb0f"
+        "outputId": "883b4dd3-6c3e-4c89-c702-33f09b0718ba"
       },
       "source": [
         "# We can take a batch of data and obtain the OOD scores like so.\n",
         "sample_scores = scorer.predict(test_ds.take(1))\n",
-        "sample_scores[:5]"
+        "sample_scores[:5], sample_scores.shape"
       ],
       "execution_count": 8,
       "outputs": [
@@ -257,11 +255,17 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.],\n",
-              "       [1.],\n",
-              "       [1.],\n",
-              "       [1.],\n",
-              "       [1.]], dtype=float32)"
+              "(array([[ -7.3858304,  -4.398713 ,   2.3269448,   8.260478 ,   0.6237583,\n",
+              "           6.951867 ,   5.303116 ,  -1.433213 ,  -5.521435 ,  -4.7768483],\n",
+              "        [ 11.8561945,   3.8889992,   0.7458444,  -3.396165 ,  -3.631293 ,\n",
+              "          -8.730821 ,  -8.521949 ,  -5.3349705,  10.599314 ,   3.2314248],\n",
+              "        [  1.4345236,   4.5795317,  -4.922901 ,  -1.4036714,  -5.604335 ,\n",
+              "          -3.132948 ,  -5.479171 ,  -3.4059682,  15.415438 ,   5.6661053],\n",
+              "        [ -6.804879 ,  -8.259593 ,   1.7251043,   4.7501116,  16.202501 ,\n",
+              "           8.437861 ,  -2.1132357,   5.5491834, -11.250345 ,  -5.944642 ],\n",
+              "        [  5.1940913,   8.496859 ,  -6.5266933,  -2.5342746,  -9.523632 ,\n",
+              "          -6.7520833,  -9.587466 ,  -9.912749 ,  28.651361 ,   6.293258 ]],\n",
+              "       dtype=float32), (128, 10))"
             ]
           },
           "metadata": {
@@ -295,7 +299,8 @@
         "    with tf.GradientTape() as tape:\n",
         "        # Calculate the scores.\n",
         "        tape.watch(test_ds_var)\n",
-        "        scores = model(test_ds_var, training=False)\n",
+        "        logits = model(test_ds_var, training=False)\n",
+        "        scores = tf.reduce_max(logits, axis=1)\n",
         "\n",
         "    # Calculate the gradients of the scores with respect to the inputs.\n",
         "    # (Notice the sign.)\n",
@@ -309,7 +314,7 @@
         "\n",
         "    return new_mean_score"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -319,7 +324,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d44O5i5HFwjF",
-        "outputId": "6384ff9e-1d24-4e0d-d64c-2bd7f0503432"
+        "outputId": "93aad08c-9892-4a83-fa6b-2aa20cc361ff"
       },
       "source": [
         "# Derive the perturbation magnitude. \n",
@@ -331,12 +336,12 @@
         "epsilon_selected = epsilon_grid[np.argmax(mean_scores)]\n",
         "print(f\"Epsilon: {epsilon_selected}\")"
       ],
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epsilon: 0.0025\n"
+            "Epsilon: 0.08\n"
           ],
           "name": "stdout"
         }
