--- a/Generalized_ODIN.ipynb
+++ b/Generalized_ODIN.ipynb
@@ -71,7 +71,7 @@
     "import sys\n",
     "sys.path.append(\"Generalized-ODIN-TF\")\n",
     "\n",
-    "import scripts resnet20_odin, resnet20\n",
+    "from scripts import resnet20_odin, resnet20\n",
     "\n",
     "from tensorflow.keras import layers\n",
     "import tensorflow as tf\n",
@@ -1233,7 +1233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
