--- a/Calculate_Epsilon.ipynb
+++ b/Calculate_Epsilon.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMK9vZ5HtuVjNPJRsRBumCo",
+      "authorship_tag": "ABX9TyO3STnahzdzUp9WEIwe0c0Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hSP_ddoJ6FSy",
-        "outputId": "7f82ae41-bd93-4871-c944-b30cff32327e"
+        "outputId": "c271e802-5a6e-40f7-846a-4663dc68106c"
       },
       "source": [
         "# Retrieve the pre-trained ResNet20 model.\n",
@@ -62,7 +62,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay\n",
             "To: /content/odin_rn_model.tar.gz\n",
-            "6.62MB [00:00, 40.2MB/s]\n"
+            "6.62MB [00:00, 16.0MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -101,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aSfgIZ1y6qQ6",
-        "outputId": "98b40271-c689-4161-9a50-86ab2d2f80ab"
+        "outputId": "195a1eaf-0a2f-4cf2-d68c-16a0b70bef92"
       },
       "source": [
         "model = tf.keras.models.load_model(\"odin_rn_model\")\n",
@@ -134,7 +134,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbMcXWvw679h",
-        "outputId": "74ebbf93-b040-4afb-896a-24d7243fcdf8"
+        "outputId": "f1e32f85-da6c-460d-824d-5ad6df334201"
       },
       "source": [
         "(_, _), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
@@ -188,9 +188,8 @@
         "id": "TsWzYdFy7Y4k"
       },
       "source": [
-        "perturb_ds = tf.convert_to_tensor(x_test[:SAMPLES_PERTURB].astype(\"float32\"))\n",
-        "ds = tf.data.Dataset.from_tensor_slices((x_test, y_test))\n",
-        "test_ds = ds.skip(SAMPLES_PERTURB).take(len(x_test) - SAMPLES_PERTURB).batch(BATCH_SIZE)"
+        "perturb_samples = x_test[:SAMPLES_PERTURB].astype(\"float32\")\n",
+        "perturb_ds = tf.data.Dataset.from_tensor_slices(perturb_samples).batch(BATCH_SIZE)"
       ],
       "execution_count": 5,
       "outputs": []
@@ -242,11 +241,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRpKXpigBCfG",
-        "outputId": "883b4dd3-6c3e-4c89-c702-33f09b0718ba"
+        "outputId": "49faf582-a7ae-4163-f00f-c1b378247e41"
       },
       "source": [
         "# We can take a batch of data and obtain the OOD scores like so.\n",
-        "sample_scores = scorer.predict(test_ds.take(1))\n",
+        "sample_scores = scorer.predict(perturb_ds.take(1))\n",
         "sample_scores[:5], sample_scores.shape"
       ],
       "execution_count": 8,
@@ -255,16 +254,16 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(array([[ -7.3858304,  -4.398713 ,   2.3269448,   8.260478 ,   0.6237583,\n",
-              "           6.951867 ,   5.303116 ,  -1.433213 ,  -5.521435 ,  -4.7768483],\n",
-              "        [ 11.8561945,   3.8889992,   0.7458444,  -3.396165 ,  -3.631293 ,\n",
-              "          -8.730821 ,  -8.521949 ,  -5.3349705,  10.599314 ,   3.2314248],\n",
-              "        [  1.4345236,   4.5795317,  -4.922901 ,  -1.4036714,  -5.604335 ,\n",
-              "          -3.132948 ,  -5.479171 ,  -3.4059682,  15.415438 ,   5.6661053],\n",
-              "        [ -6.804879 ,  -8.259593 ,   1.7251043,   4.7501116,  16.202501 ,\n",
-              "           8.437861 ,  -2.1132357,   5.5491834, -11.250345 ,  -5.944642 ],\n",
-              "        [  5.1940913,   8.496859 ,  -6.5266933,  -2.5342746,  -9.523632 ,\n",
-              "          -6.7520833,  -9.587466 ,  -9.912749 ,  28.651361 ,   6.293258 ]],\n",
+              "(array([[-3.0669887 , -0.98727894,  1.3357033 ,  7.699172  , -1.4338286 ,\n",
+              "          3.7613163 ,  1.7567728 , -1.6623482 , -2.2402666 , -4.084644  ],\n",
+              "        [ 4.243999  ,  4.9578056 , -3.025357  , -1.827295  , -5.080552  ,\n",
+              "         -5.1366854 , -4.2314186 , -4.6315656 , 14.699764  ,  1.1763803 ],\n",
+              "        [ 2.3927803 ,  6.0111713 , -1.8230379 , -2.0257957 , -4.6426225 ,\n",
+              "         -4.522476  , -0.6013246 , -3.417397  ,  7.595489  ,  1.4064122 ],\n",
+              "        [ 2.7645912 , -0.52025324,  1.0175781 ,  1.5141805 , -1.1482818 ,\n",
+              "         -1.2445204 , -1.2819008 , -1.3259014 ,  1.0941672 , -0.534507  ],\n",
+              "        [-3.8385963 , -0.5887998 ,  1.1630347 ,  1.2132012 , -0.54011464,\n",
+              "         -0.5341552 ,  9.990833  , -3.2007434 , -2.8950775 , -0.83300734]],\n",
               "       dtype=float32), (128, 10))"
             ]
           },
@@ -294,27 +293,37 @@
       },
       "source": [
         "def perturb_images(model, epsilon):\n",
-        "    test_ds_var = tf.Variable(perturb_ds, trainable=True)\n",
+        "    batch_wise_means = []\n",
         "    \n",
-        "    with tf.GradientTape() as tape:\n",
-        "        # Calculate the scores.\n",
-        "        tape.watch(test_ds_var)\n",
-        "        logits = model(test_ds_var, training=False)\n",
-        "        scores = tf.reduce_max(logits, axis=1)\n",
+        "    for images in perturb_ds:\n",
+        "        test_ds_var = tf.Variable(images, trainable=True)\n",
+        "        \n",
+        "        with tf.GradientTape() as tape:\n",
+        "            # Calculate the scores.\n",
+        "            tape.watch(test_ds_var)\n",
+        "            logits = model(test_ds_var, training=False)\n",
+        "            loss = tf.reduce_max(logits, axis=1)\n",
+        "            loss = -tf.reduce_mean(loss)\n",
         "\n",
-        "    # Calculate the gradients of the scores with respect to the inputs.\n",
-        "    # (Notice the sign.)\n",
-        "    gradients = -tape.gradient(scores, test_ds_var)\n",
+        "        # Calculate the gradients of the scores with respect to the inputs.\n",
+        "        gradients = tape.gradient(loss, test_ds_var)\n",
+        "        gradients = tf.math.greater_equal(gradients, 0)\n",
+        "        gradients = tf.cast(gradients, tf.float32)\n",
         "\n",
-        "    # Perturb the inputs and derive new mean score.\n",
-        "    test_ds_var.assign_sub(epsilon * tf.sign(gradients))\n",
-        "    static_tensor = tf.convert_to_tensor(test_ds_var)\n",
-        "    static_tensor = tf.clip_by_value(static_tensor, 0., 255.)\n",
-        "    new_mean_score = tf.reduce_mean(model.predict(static_tensor))\n",
-        "\n",
-        "    return new_mean_score"
+        "        # Perturb the inputs and derive new mean score.\n",
+        "        # test_ds_var.assign_add(epsilon * gradients)\n",
+        "        static_tensor = tf.convert_to_tensor(test_ds_var)\n",
+        "        static_tensor = static_tensor + epsilon + gradients\n",
+        "        static_tensor = tf.clip_by_value(static_tensor, 0., 255.)\n",
+        "        \n",
+        "        new_scores = model.predict(static_tensor)\n",
+        "        new_scores = -tf.reduce_max(new_scores, axis=1)\n",
+        "        new_mean_score = tf.reduce_mean(new_scores).numpy()\n",
+        "        batch_wise_means.append(new_mean_score)\n",
+        "    \n",
+        "    return batch_wise_means"
       ],
-      "execution_count": 17,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -324,24 +333,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d44O5i5HFwjF",
-        "outputId": "93aad08c-9892-4a83-fa6b-2aa20cc361ff"
+        "outputId": "97283960-b882-4d4e-d33c-2700cafe1f1f"
       },
       "source": [
         "# Derive the perturbation magnitude. \n",
-        "mean_scores = []\n",
+        "mean_scores = {}\n",
         "\n",
         "for epsilon in epsilon_grid:\n",
-        "    mean_scores.append(perturb_images(scorer, epsilon).numpy())\n",
+        "    mean_scores[epsilon] = np.mean(perturb_images(scorer, epsilon))\n",
         "\n",
-        "epsilon_selected = epsilon_grid[np.argmax(mean_scores)]\n",
-        "print(f\"Epsilon: {epsilon_selected}\")"
+        "best_epsilon = min(mean_scores, key=(lambda key: mean_scores[key]))\n",
+        "print(f\"Epsilon: {best_epsilon / 2.}\")"
       ],
-      "execution_count": 18,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epsilon: 0.08\n"
+            "Epsilon: 0.00125\n"
           ],
           "name": "stdout"
         }
